<resources>
    <string name="app_name">GuideToVladivostok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Адрес</string>
    <string name="name_hotel">Название отеля</string>
    <string name="working_time">Время работы</string>
    <string name="phone_number">Номер телефона</string>
    <string name="add_location">Добавить локацию</string>
    <string name="name_location">Название локации</string>
    <string name="information_about_location">Информация о локации</string>
    <string name="save">Сохранить</string>
    <string name="get_directions">Проложить маршрут</string>
    <string name="more">Подробнее</string>
    <string name="update">Обновить</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="about_program">О программе</string>
    <string name="link">Ссылка на условия использования Яндекс.Карт: https://yandex.ru/legal/maps_termsofuse</string>
    <string name="information_about_program">Данная программа создана в учебных целях. В программе используется набор инструментов для работы с картами Яндекс MapKit.</string>
</resources>