<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/point_fragment_background"
    tools:context=".activity.InfoHotelFragment">

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameHotel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="18dp"
        android:text="@string/name_hotel"
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeButton" />

    <TextView
        android:id="@+id/workingTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="18dp"
        android:inputType="textMultiLine|textCapSentences"
        android:text="@string/working_time"
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameHotel" />

    <TextView
        android:id="@+id/addressHotel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="18dp"
        android:inputType="textMultiLine|textCapSentences"
        android:text="@string/address"
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workingTime" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="18dp"
        android:inputType="textMultiLine|textCapSentences"
        android:text="@string/phone_number"
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressHotel" />

    <Button
        android:id="@+id/getDirectionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="48dp"
        android:text="@string/get_directions"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>