<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".activity.CreateOrChangeLocationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginRight="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_edit_24"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/closeButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNameLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/text_view_background"
            android:elevation="2dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closeButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/name_location"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="100"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutInformationAboutLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/text_view_background"
            android:elevation="2dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="800"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNameLocation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/informationAboutLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/information_about_location"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="800"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/addressLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="48dp"
            android:text="@string/address"
            android:textAlignment="center"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutInformationAboutLocation" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressLocation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>